# LM-server

./: CMakeLists.txt  main.c
LM_logika/: Mravec.c  Mravec.h  Plocha.c  Plocha.h  Pole.c  Pole.h  Simulacia.c  Simulacia.h
pos_sockets/: active_socket.c
